syntax = "proto3";
package pizzatribes;

option go_package = "github.com/fnatte/pizza-tribes/internal";

import "gamestate.proto";
import "stats.proto";

message ServerMessage {
  message Response {
    string requestId = 1;
    bool result = 2;
  }

  message User {
    string username = 1;
  }

  string id = 1;
  oneof payload {
    GameStatePatch stateChange = 2;
    User user = 3;
    Response response = 4;
    Stats stats = 5;
  }
}

